Bone X-ray no longer works in pose mode or weight paint mode. #72155

Closed
opened 2019-12-04 03:57:45 +01:00 by choihojin · 21 comments

System Information
Operating system: MacOS High Sierra
Graphics card: AMD Radeon HD 6970M 1024 MB

Blender Version
Broken: blender-2.82-fda791ab1241-macOS
Worked: (optional)

Short description of error
Bone X-ray do not active in pose mode or weight paint mode.
스크린샷 2019-12-04 오전 11.56.21.png

Exact steps for others to reproduce the error
Open:
wp_bone_xray_T72155.blend

  • In overlay popover enable Show Bone X-Ray (or press Alt-Z).
**System Information** Operating system: MacOS High Sierra Graphics card: AMD Radeon HD 6970M 1024 MB **Blender Version** Broken: blender-2.82-fda791ab1241-macOS Worked: (optional) **Short description of error** Bone X-ray do not active in pose mode or weight paint mode. ![스크린샷 2019-12-04 오전 11.56.21.png](https://archive.blender.org/developer/F8188841/스크린샷_2019-12-04_오전_11.56.21.png) **Exact steps for others to reproduce the error** Open: [wp_bone_xray_T72155.blend](https://archive.blender.org/developer/F8267725/wp_bone_xray_T72155.blend) - In overlay popover enable `Show Bone X-Ray` (or press Alt-Z).
Author

Added subscriber: @hominy

Added subscriber: @hominy

#73478 was marked as duplicate of this issue

#73478 was marked as duplicate of this issue

#73004 was marked as duplicate of this issue

#73004 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

What are the steps to reproduce the problem?
Could you provide a simple .blend file showing the issue?

What are the steps to reproduce the problem? Could you provide a simple .blend file showing the issue?
Author

Very simple.
It only seems to be a macOS problem.0001-8544.mp4

Very simple. It only seems to be a macOS problem.[0001-8544.mp4](https://archive.blender.org/developer/F8190648/0001-8544.mp4)

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

I can confirm on Windows.
That option was not always called "Show Bone X-Ray", before it was called "Bone selection overlay".
Apparently this feature is being used in a different way than it was designed for and now it's just doubling the X-Ray feature.
In this case I think the code could be simplified and deduplicated.

In #66950 we can see that this feature worked on wpaint.

@Jeroen-Bakker, this seems to be your area, mind taking a look?
CC @fclem

I can confirm on Windows. That option was not always called `"Show Bone X-Ray"`, before it was called `"Bone selection overlay"`. Apparently this feature is being used in a different way than it was designed for and now it's just doubling the X-Ray feature. In this case I think the code could be simplified and deduplicated. In #66950 we can see that this feature worked on wpaint. @Jeroen-Bakker, this seems to be your area, mind taking a look? CC @fclem

Added subscriber: @CobraA

Added subscriber: @CobraA

It's not just weight painting it's also broken in pose mode, the X-Ray option doesn't work probably due to the Overaly engine refactoring
@mano-wii Should we make a report for each or is it all related.

It's not just weight painting it's also broken in pose mode, the X-Ray option doesn't work probably due to the Overaly engine refactoring @mano-wii Should we make a report for each or is it all related.

In #72155#830590, @CobraA wrote:
It's not just weight painting it's also broken in pose mode, the X-Ray option doesn't work probably due to the Overaly engine refactoring
@mano-wii Should we make a report for each or is it all related.

No need, it's related.

> In #72155#830590, @CobraA wrote: > It's not just weight painting it's also broken in pose mode, the X-Ray option doesn't work probably due to the Overaly engine refactoring > @mano-wii Should we make a report for each or is it all related. No need, it's related.

Closed as duplicate of #73004

Closed as duplicate of #73004

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'

Added subscriber: @GabrielMoro

Added subscriber: @GabrielMoro

Added subscriber: @shannonz-1

Added subscriber: @shannonz-1

Just to say that this bug is still active. I found it in:

version: 2.82 (sub 6), branch: master, commit date: 2020-01-17 18:59, hash: 5472ae6fdf, type: Release
build date: 2020-01-18, 00:19:42
platform: Linux

Cannot select bones in Pose_Mode. Toggle_X-Ray button is hilited, but bones are partly obscured behind character mesh, grey'd out behind mesh, but still visible.

Click on "Toggle_X-Ray" button. Hilite stays lit, but now all bones drawn "in_front". Can now select bones. Draw-bones-in-front behaviour is spotty, though: transform ViewPort view, and sometimes bones are not completely drawn. I resized window, and can not recreate this incomplete drawing of bones.

All this behaviour is the same, regardless of ViewPort shading modes: Wire | Solid | Material_Preview.

Just to say that this bug is still active. I found it in: version: 2.82 (sub 6), branch: master, commit date: 2020-01-17 18:59, hash: 5472ae6fdff6, type: Release build date: 2020-01-18, 00:19:42 platform: Linux Cannot select bones in Pose_Mode. Toggle_X-Ray button is hilited, but bones are partly obscured behind character mesh, grey'd out behind mesh, but still visible. Click on "Toggle_X-Ray" button. Hilite stays lit, but now all bones drawn "in_front". Can now select bones. Draw-bones-in-front behaviour is spotty, though: transform ViewPort view, and sometimes bones are not completely drawn. I resized window, and can not recreate this incomplete drawing of bones. All this behaviour is the same, regardless of ViewPort shading modes: Wire | Solid | Material_Preview.
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Can also confirm, currently "Show Bone X-Ray" seems to actually prevent bones from displaying in front of the mesh, even when the per-object "In Front" option is enabled.

I don't know what the original or current intended design is for "Show Bone X-Ray", but I wish that all enabling it did was to make the viewport and selection act as if all pose mode armatures' "In Front" option was enabled.

Even before this bug, this was not the case, because when Show Bone X-Ray was disabled, and In Front was enabled, trying to select bones that were behind the mesh would fail, which would be very frustrating, since in this case there is no visual difference between Show Bone X-Ray being On or Off. You would just know that it's off because half of your selection attempts are failing.

Can also confirm, currently "Show Bone X-Ray" seems to actually prevent bones from displaying in front of the mesh, even when the per-object "In Front" option is enabled. I don't know what the original or current intended design is for "Show Bone X-Ray", but I wish that all enabling it did was to make the viewport and selection act as if all pose mode armatures' "In Front" option was enabled. Even before this bug, this was not the case, because when Show Bone X-Ray was disabled, and In Front was enabled, trying to select bones that were behind the mesh would fail, which would be very frustrating, since in this case there is no visual difference between Show Bone X-Ray being On or Off. You would just know that it's off because half of your selection attempts are failing.
Germano Cavalcante changed title from Bone X-ray is not active in weight paint mode. to Bone X-ray no longer works in pose mode or weight paint mode. 2020-01-29 19:03:44 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Clément Foucault self-assigned this 2020-02-03 19:41:06 +01:00

This issue was referenced by 86fb8062d7

This issue was referenced by 86fb8062d7ba0b52db7b5685f74d9eb7e102350e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72155
No description provided.