Fix T72155 Overlay: Bone X-ray no longer works in pose or weight paint mode