source/blender/draw/engines/overlay/overlay_private.h
@@ -300,6 +300,7 @@ typedef struct OVERLAY_PrivateData {
   struct {
     bool transparent;
     bool show_relations;
+    bool do_pose_xray;
     bool do_pose_fade_geom;
   } armature;
   struct {
